# galaxy

./: .gitignore  Cargo.toml  Cross.toml  LICENCE-APACHE  LICENCE-MIT  README.md  TODO.md  bacon.toml  cliff.toml  deny.toml  index.html  justfile  justfile-example  rustfmt.toml
.cargo/: compile-times-config.toml  config.toml  example-config-file.toml  recommended-config.toml
.github/config/: grcov.yml
.github/workflows/: ci.yml  coverage.yml  pages.yml  release.yml
assets/: core.assets.ron  default.assets.ron
assets/misc/: gamepad_bluetooth_list.txt
assets/shaders/celestials/: earthlike.wgsl
assets/shaders/planets/: earthlike.wgsl
assets/ui/icons/: menu_16*16.aseprite  prompts_16x16.spritesheet copy.ron
src/: cli.rs  debug.rs  game.rs  lib.rs  loading.rs  main.rs  physics.rs  player.rs  polar.rs  shaders.rs  state.rs  states.rs  ui.rs  utils.rs  world.rs
src/game/: planet.rs
src/player/: input.rs
src/shaders/: cloud_cover.rs  clouds.rs  consts.rs  earthlike.rs  note.md  pipeline.rs  types.rs  types.wgsl
src/ui/: main_menu.rs  settings.rs
tools/sprite_sheet_indexer/: Cargo.toml
tools/sprite_sheet_indexer/src/: main.rs
tools/sprite_sheet_tool/: Cargo.toml
tools/sprite_sheet_tool/src/: main.rs
tools/sprite_tool/: Cargo.toml
tools/sprite_tool/src/: indexer.rs  main.rs
