[package]
name = "galaxy"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cosmiccrew/galaxy"
description = "Cosmic Crew: Galaxy is a 2d, class based gravity oriented fighting game."

[workspace]
resolver = "2"
members = ["tools/*"]

#See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#the bevy game engine itself
bevy = { version = "0.13.0", features = ["serialize"] }
#resource and asset inspection in bevy
bevy-inspector-egui = { version = "0.23.2", optional = true }
#2d physics engine in bevy
# bevy_xpbd_2d = { git = "https://github.com/Jondolf/bevy_xpbd", features = ["enhanced-determinism"] }
bevy_xpbd_2d = { version = "0.4.2", features = ["enhanced-determinism"] }

#bevu "rollback" ggrs networking library
bevy_ggrs = { version = "0.15.0", features = ["wasm-bindgen"], optional = true }

# bevy_matchbox = { git = "https://github.com/johanhelsing/matchbox", version = "0.7.0", features = ["ggrs"], optional = true }
bevy_matchbox = { version = "0.8.0", features = ["ggrs"], optional = true }

#handling inputs in a logical, extensible way with options for command combinations or aliases.
leafwing-input-manager = "0.13.3"

#(ser)ialising/(de)serialising library
serde = "1"
#dynamic error handler
miette = { version = "7.1.0" }
#logging
log = "0.4.20"

#pseudo random number generation
rand = "0.8.5"
#cli parsing for startup asset config's
clap = { version = "4.5.1", features = ["derive"] }


[features]
default = []

fast_compile = ["bevy/dynamic_linking"]

debug = ["dep:bevy-inspector-egui", "bevy_xpbd_2d/debug-plugin", "watcher", "miette/fancy"]

watcher = ["bevy/file_watcher", "bevy/embedded_watcher"]

#to reduce the number of dependencies until networking is a feature
networking = ["dep:bevy_ggrs", "dep:bevy_matchbox"]

#used to set the correct asset paths for bundling
bundle = []

[profile.dev]
opt-level = 1
#Large compile-time improvements on macos
# debug = 1

#Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
#High optimisations, but long compile times
opt-level = 3
# #Medium optimisations, but shorter compile times
# opt-level = 2

[profile.wasm]
# Use release profile as default values
inherits = "dev"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# # Do a second optimization pass removing duplicate or unused code from dependencies.
# # Slows compile times, marginal improvements
# lto = "fat"

# # When building crates, optimize larger chunks at a time
# # Slows compile times, marginal improvements
# codegen-units = 1



[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# # When building crates, optimize larger chunks at a time
# # Slows compile times, marginal improvements
# codegen-units = 1
