[package]
name = "galaxy"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cosmiccrew/galaxy"
description = "Cosmic Crew: Galaxy is a 2d, class based gravity oriented fighting game."

[workspace]
resolver = "2"
members = ["tools/*"]

#See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#the bevy game engine itself
bevy = { version = "0.13.2", features = ["serialize"] }
#resource and asset inspection in bevy
bevy-inspector-egui = { version = "0.24.0", optional = true }
#2d physics engine in bevy
bevy_xpbd_2d = { version = "0.4.2", features = ["enhanced-determinism"] }

# a networking library with good support for bevy, leafwing-input-manager, 
lightyear = { version = "0.12.0", features = [
  "webtransport",
  "leafwing",
], optional = true }


#handling inputs in a logical, extensible way with options for command combinations or aliases.
leafwing-input-manager = "0.13.3"

#(ser)ialising/(de)serialising library
serde = "1"
#dynamic error handler
miette = { version = "7.2.0" }
#logging
log = "0.4.21"

#pseudo random number generation
rand = "0.8.5"
#cli parsing for startup asset config's
clap = { version = "4.5.54", features = ["derive"] }


[features]
default = []

fast_compile = ["bevy/dynamic_linking"]

debug = [
  "dep:bevy-inspector-egui",
  "bevy_xpbd_2d/debug-plugin",
  "watcher",
  "miette/fancy",
]

watcher = ["bevy/file_watcher", "bevy/embedded_watcher"]

#to reduce the number of dependencies until networking is a feature
networking = ["dep:lightyear"]

#used to set the correct asset paths for bundling
bundle = []

[profile.dev]
opt-level = 1
#Large compile-time improvements on macos
# debug = 1

#Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
#High optimisations, but long compile times
opt-level = 3
# #Medium optimisations, but shorter compile times
# opt-level = 2

[profile.flamegraph]
# Use release profile as default values
inherits = "release"
debug = true


[profile.wasm]
# Use release profile as default values
inherits = "dev"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# # Do a second optimization pass removing duplicate or unused code from dependencies.
# # Slows compile times, marginal improvements
# lto = "fat"

# # When building crates, optimize larger chunks at a time
# # Slows compile times, marginal improvements
# codegen-units = 1


[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# # When building crates, optimize larger chunks at a time
# # Slows compile times, marginal improvements
# codegen-units = 1

[patch.crates-io]
lightyear = { git = "https://github.com/cBournhonesque/lightyear" }
