[package]
name = "sprite_sheet_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
image = "0.24.6"
indexmap = "2.0.1"
ron = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
show-image = { version = "0.13.1", features = ["image"] }
text_io = "0.1.12"
anyhow = "1"
