[package]
name = "sprite_sheet_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
image = "0.25.1"
indexmap = "2.12.1"
ron = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
show-image = { version = "0.14.1", features = ["image"] }
text_io = "0.1.13"
anyhow = "1"
